.provarCaches/00D5f000005vwGkEAI/objects/rstk__icitemss__c.object
<CustomObject>
    <description>icitemss__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__icitemss_div__r.rstk__sydiv_div__c &amp; &apos;_&apos; &amp;  rstk__icitemss_icitem__r.rstk__icitem_item__r.rstk__peitem_item__c &amp; &apos;_&apos; &amp;  rstk__icitemss_superitem__r.rstk__icitem_item__r.rstk__peitem_item__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>LEFT(rstk__icitemss_icitem__r.Name, 40) &amp; &apos;-&apos; &amp;  LEFT(rstk__icitemss_superitem__r.Name, 39)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icitemss_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Inventory Item Supersessions</relationshipLabel>
        <relationshipName>icitemsss</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icitemss_icitem__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Inventory Item</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>Inventory Item Supersessions</relationshipLabel>
        <relationshipName>icitemsss</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icitemss_superitem__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the Item to be used up first, before using the Inventory Item specified on record.</inlineHelpText>
        <label>Superseded</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>Inventory Item Supersessions (Supersede With Item)</relationshipLabel>
        <relationshipName>icitemsss2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icitemss_useinseq__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Use In Sequence</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Inventory Item Supersession</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <columns>NAME</columns>
        <columns>rstk__icitemss_div__c</columns>
        <columns>rstk__icitemss_icitem__c</columns>
        <columns>rstk__icitemss_superitem__c</columns>
        <columns>rstk__icitemss_useinseq__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inventory Item Supersessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rstk__Read_Only_Field_IcItem</fullName>
        <active>true</active>
        <description>Field is not Editable and should belong to Inventory Item Supersession Division.</description>
        <errorConditionFormula>AND(NOT(ISNEW()) ,ISCHANGED(rstk__icitemss_icitem__c)) ||  rstk__icitemss_icitem__r.rstk__icitem_div__c &lt;&gt;  rstk__icitemss_div__c</errorConditionFormula>
        <errorMessage>Field is not Editable and should belong to Inventory Item Supersession Division.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Read_Only_Field_Super_IcItem</fullName>
        <active>true</active>
        <description>Field is not Editable and should belong to Inventory Item Supersession Division.</description>
        <errorConditionFormula>AND(NOT(ISNEW()) ,ISCHANGED(rstk__icitemss_superitem__c)) || rstk__icitemss_icitem__r.rstk__icitem_div__c &lt;&gt; rstk__icitemss_div__c</errorConditionFormula>
        <errorMessage>Field is not Editable and should belong to Inventory Item Supersession Division.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Use_in_Sequence_Validation</fullName>
        <active>true</active>
        <description>Use in Sequence must be greater than zero</description>
        <errorConditionFormula>ISBLANK(rstk__icitemss_useinseq__c) || rstk__icitemss_useinseq__c &lt;= 0</errorConditionFormula>
        <errorMessage>Use in Sequence must be greater than zero</errorMessage>
    </validationRules>
</CustomObject>